--- a/styles/style.css
+++ b/styles/style.css
@@ -34,6 +34,10 @@ footer{
 	padding: 8px;
 }
 
+.navbar-inverse{
+	
+}
+
 #right_content{
 	background-color: white;
 	box-shadow: 1px 1px 1px lightgrey;
